Command Fixes n Shit